9th commit : Added the Sqlite database and a database handler to store data of AddPinPlaceActivity and used 3rd party library i.e dbinspector  to check on the database : )

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
             android:theme="@style/CustomNoActionBarTheme"
              />
         <activity
+            android:name="im.dino.dbinspector.activities.DbInspectorActivity"
+            android:exported="true" />
+        <activity
             android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
