10th commit : Setting onClickListener over the recyclerview elements, for this we need to work over adapter and the mainActivity : )

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-feature android:name="android.hardware.camera"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -17,11 +21,15 @@
         android:theme="@style/Theme.PinPlaces"
         tools:targetApi="31">
         <activity
-            android:name=".activities.AddPinPlaceActivity"
+            android:name=".activities.PinPlaceDetailActivity"
             android:screenOrientation="portrait"
+            android:label="HAPPY PLACE DETAILS"
+            android:exported="false" />
+        <activity
+            android:name=".activities.AddPinPlaceActivity"
             android:label="Pin Your Place"
-            android:theme="@style/CustomNoActionBarTheme"
-             />
+            android:screenOrientation="portrait"
+            android:theme="@style/CustomNoActionBarTheme" />
         <activity
             android:name="im.dino.dbinspector.activities.DbInspectorActivity"
             android:exported="true" />
